# poc-clearml

./: .gitignore  README.md  main.py  pyproject.toml
clearml-client/: .env.default  3d_plots_reporting.py  README.md  main.py  matplotlib_manual_reporting.py  pyproject.toml  pytorch_mnist.py
clearml-server/: .env.default  Makefile  README.md  compose.oauth2proxy.yaml  compose.yaml
clearml-server/config/: apiserver.conf.default
