[project]
name = "clearml-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
]

[dependency-groups]
client = [
    "clearml[s3]>=2.1.3",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "numpy<2",
    "setuptools<80",
    "python-dotenv>=1.2.1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
